[gd_scene load_steps=14 format=3 uid="uid://c7v878ho36jpc"]

[ext_resource type="Script" uid="uid://tnsiq3ilkpnu" path="res://scenes/objects/scripts/obelisk.gd" id="1_o0g6v"]
[ext_resource type="Texture2D" uid="uid://du54vh5anc2jm" path="res://scenes/big_spritesheet.aseprite" id="2_rtbaw"]
[ext_resource type="Script" uid="uid://c1sgyfqknkj8i" path="res://scripts/ysortHelper.gd" id="3_rtbaw"]
[ext_resource type="AudioStream" uid="uid://dstsovo76oeh6" path="res://audio/sfx/GameOff_Obelisk_Rise.ogg" id="4_11tqd"]
[ext_resource type="AudioStream" uid="uid://dha7iftm00nrb" path="res://audio/sfx/GameOff_Obelisk_Switch_ogg.ogg" id="4_dweql"]
[ext_resource type="PackedScene" uid="uid://ck42nani505kg" path="res://audio/interact_indicator.tscn" id="6_r5cto"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o0g6v"]
radius = 27.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_11tqd"]
size = Vector2(20, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rtbaw"]
size = Vector2(20, 28)

[sub_resource type="CircleShape2D" id="CircleShape2D_rtbaw"]
radius = 7.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_775fd"]
random_pitch = 1.05
streams_count = 1
stream_0/stream = ExtResource("4_dweql")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_y6ndc"]
random_pitch = 1.05
streams_count = 1
stream_0/stream = ExtResource("4_dweql")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_dweql"]
streams_count = 1
stream_0/stream = ExtResource("4_11tqd")

[node name="obelisk" type="Node2D"]
script = ExtResource("1_o0g6v")

[node name="mask" type="Sprite2D" parent="."]
clip_children = 1
position = Vector2(0, -6)
texture = ExtResource("2_rtbaw")
region_enabled = true
region_rect = Rect2(8, 177, 16, 28)

[node name="obelisk" type="Node2D" parent="mask"]

[node name="notActiveSprite" type="Sprite2D" parent="mask/obelisk"]
texture = ExtResource("2_rtbaw")
region_enabled = true
region_rect = Rect2(8, 177, 16, 28)

[node name="activeSprite" type="Sprite2D" parent="mask/obelisk"]
visible = false
texture = ExtResource("2_rtbaw")
region_enabled = true
region_rect = Rect2(40, 177, 16, 28)

[node name="playerInRangeToActivate" type="Area2D" parent="."]
position = Vector2(0, -6)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerInRangeToActivate"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_o0g6v")

[node name="YsortHelper" type="Area2D" parent="."]
visible = false
script = ExtResource("3_rtbaw")
metadata/_custom_type_script = "uid://c1sgyfqknkj8i"

[node name="CollisionShape2D" type="CollisionShape2D" parent="YsortHelper"]
position = Vector2(0, -20.5)
shape = SubResource("RectangleShape2D_11tqd")

[node name="YsortHelper2" type="Area2D" parent="."]
visible = false
position = Vector2(0, 14)
script = ExtResource("3_rtbaw")
metadata/_custom_type_script = "uid://c1sgyfqknkj8i"

[node name="CollisionShape2D" type="CollisionShape2D" parent="YsortHelper2"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_rtbaw")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_rtbaw")

[node name="activeSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_775fd")
volume_db = 6.5
max_distance = 200.0
attenuation = 2.2191393
bus = &"Sfx"

[node name="notActiveSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_y6ndc")
volume_db = 6.5
pitch_scale = 0.95
max_distance = 200.0
bus = &"Sfx"

[node name="riseSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_dweql")
volume_db = -10.0
max_distance = 400.0
bus = &"Sfx"

[node name="goDownSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_dweql")
volume_db = -10.0
max_distance = 400.0
attenuation = 2.143547
bus = &"Sfx"

[node name="interactIndicator" parent="." instance=ExtResource("6_r5cto")]
position = Vector2(0, -27)

[connection signal="body_entered" from="playerInRangeToActivate" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="playerInRangeToActivate" to="." method="_on_area_2d_body_exited"]
